# CompuGraph

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  mnist_example.ipynb  mnist_example.py  requirements.txt  setup.py  test.ipynb  test.py
examples/: mnist_example.ipynb  mnist_example.py
include/: compugraph.h  dataset.h  graph.h  model.h  node.h  optimizer.h  tensor.h
python/: CMakeLists.txt  compugraph.cpp  pysimplednn.cpp
src/: CMakeLists.txt  dataset.cpp  graph.cpp  model.cpp  node.cpp  optimizer.cpp  tensor.cpp
test/: CMakeLists.txt  test.cpp  test_graph1.cpp  test_mlp1.cpp  test_mlp2.cpp  test_perceptron.cpp  test_simple_graph.cpp
tests/: CMakeLists.txt  test_graph1.cpp  test_mlp1.cpp  test_mlp2.cpp  test_simple_graph.cpp
