find_package(pybind11 CONFIG QUIET)
if(pybind11_FOUND)
  include_directories(${COMPUGRAPH_HEADER_DIR})
  FILE(GLOB PYBIND_SOURCES ./**.cpp)
  find_package(Python3 ${PYBIND11_PYTHON_VERSION} COMPONENTS NumPy REQUIRED)
  pybind11_add_module(compugraph ${PYBIND_SOURCES})
  target_link_libraries(compugraph PUBLIC cg Python3::NumPy)

  # for xsimd
  if(WIN32)
  set(CMAKE_EXE_LINKER_FLAGS /MANIFEST:NO)
  if(HAVE_AVX2_EXTENSIONS AND NOT MSVC_VERSION LESS 1800)
    target_compile_options(compugraph PRIVATE /arch:AVX2)
  elseif(HAVE_AVX_EXTENSIONS AND NOT MSVC_VERSION LESS 1600)
    target_compile_options(compugraph PRIVATE /arch:AVX)
  elseif(ARCH STREQUAL "arm")
    target_compile_options(compugraph PRIVATE /arch:ARMv7VE)
  endif()
  else()
  target_compile_options(compugraph PRIVATE -march=native)
  endif()
endif()
