include_directories(${SIMPLEDNN_HEADER_DIR})
FILE(GLOB SIMPLEDNN_SOURCES ./**.cpp)
add_library(simplednn ${SIMPLEDNN_SOURCES})
target_link_libraries(simplednn ${lapackblas_libraries})

# for xsimd
if(WIN32)
	set(CMAKE_EXE_LINKER_FLAGS /MANIFEST:NO)
	if(HAVE_AVX2_EXTENSIONS AND NOT MSVC_VERSION LESS 1800)
		target_compile_options(simplednn PRIVATE /arch:AVX2)
	elseif(HAVE_AVX_EXTENSIONS AND NOT MSVC_VERSION LESS 1600)
		target_compile_options(simplednn PRIVATE /arch:AVX)
	elseif(ARCH STREQUAL "arm")
		target_compile_options(simplednn PRIVATE /arch:ARMv7VE)
	endif()
else()
	target_compile_options(simplednn PRIVATE -march=native)
endif()