include_directories(${COMPUGRAPH_HEADER_DIR})
FILE(GLOB COMPUGRAPH_SOURCES ./**.cpp)
add_library(cg ${COMPUGRAPH_SOURCES})
target_link_libraries(cg ${lapackblas_libraries})
add_dependencies(cg xtensor-python)

# for xsimd
if(WIN32)
	set(CMAKE_EXE_LINKER_FLAGS /MANIFEST:NO)
	if(HAVE_AVX2_EXTENSIONS AND NOT MSVC_VERSION LESS 1800)
		target_compile_options(cg PRIVATE /arch:AVX2)
	elseif(HAVE_AVX_EXTENSIONS AND NOT MSVC_VERSION LESS 1600)
		target_compile_options(cg PRIVATE /arch:AVX)
	elseif(ARCH STREQUAL "arm")
		target_compile_options(cg PRIVATE /arch:ARMv7VE)
	endif()
else()
	target_compile_options(cg PRIVATE -march=native)
endif()